// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<slider> demo: render [basic] correctly 1`] = `
"<div class=\\"mb-slider\\" style=\\"width: 200px;\\">
  <div class=\\"mb-slider-track\\">
    <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 50%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"mb-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [disabled] correctly 1`] = `
"<div class=\\"mb-slider\\" style=\\"width: 200px;\\">
  <div class=\\"mb-slider-track mb-slider-track-disabled\\">
    <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 50%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"true\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"mb-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [input] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"mb-slider\\" style=\\"width: 300px;\\">
      <div class=\\"mb-slider-track\\">
        <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 90%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"mb-slider-btn\\"></div>
        <!---->
      </div>
      <div class=\\"mb-slider-input\\">
        <!--v-if--><span class=\\"mb-input-wrapper mb-input-number mb-input-number-mode-embed mb-input-number-size-medium\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" class=\\"mb-input mb-input-size-medium\\" type=\\"text\\"><!----><!----></span>
      </div>
    </div>
  </div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-slider\\" style=\\"width: 380px;\\">
      <div class=\\"mb-slider-track\\">
        <div class=\\"mb-slider-bar\\" style=\\"left: 10%; right: 80%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"mb-slider-btn\\"></div>
        <!---->
        <div style=\\"left: 20%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" aria-valuetext=\\"20\\" class=\\"mb-slider-btn\\"></div>
        <!---->
      </div>
      <div class=\\"mb-slider-input\\"><span class=\\"mb-input-wrapper mb-input-number mb-input-number-mode-embed mb-input-number-size-medium\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" class=\\"mb-input mb-input-size-medium\\" type=\\"text\\"><!----><!----></span>
        <div class=\\"mb-slider-input-hyphens\\"></div><span class=\\"mb-input-wrapper mb-input-number mb-input-number-mode-embed mb-input-number-size-medium\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" class=\\"mb-input mb-input-size-medium\\" type=\\"text\\"><!----><!----></span>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<slider> demo: render [marks] correctly 1`] = `
"<div class=\\"mb-slider mb-slider-with-marks\\" style=\\"width: 300px;\\">
  <div class=\\"mb-slider-track\\">
    <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 66.67%;\\"></div>
    <!--v-if-->
    <div class=\\"mb-slider-dots\\">
      <div class=\\"mb-slider-dot-wrapper\\" style=\\"left: 0%;\\">
        <div class=\\"mb-slider-dot mb-slider-dot-active\\"></div>
      </div>
      <div class=\\"mb-slider-dot-wrapper\\" style=\\"left: 33.33%;\\">
        <div class=\\"mb-slider-dot mb-slider-dot-active\\"></div>
      </div>
      <div class=\\"mb-slider-dot-wrapper\\" style=\\"left: 66.67%;\\">
        <div class=\\"mb-slider-dot\\"></div>
      </div>
      <div class=\\"mb-slider-dot-wrapper\\" style=\\"left: 100%;\\">
        <div class=\\"mb-slider-dot\\"></div>
      </div>
    </div>
    <div class=\\"mb-slider-marks\\">
      <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"left: 0%;\\">0km</div>
      <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"left: 33.33%;\\">5km</div>
      <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"left: 66.67%;\\">10km</div>
      <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"left: 100%;\\">15km</div>
    </div>
    <!--v-if-->
    <div style=\\"left: 33.33%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"15\\" aria-valuemin=\\"0\\" aria-valuenow=\\"5\\" aria-valuetext=\\"5\\" class=\\"mb-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [range] correctly 1`] = `
"<div class=\\"mb-slider\\" style=\\"width: 300px;\\">
  <div class=\\"mb-slider-track\\">
    <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 90%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 0%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"0\\" aria-valuetext=\\"0\\" class=\\"mb-slider-btn\\"></div>
    <!---->
    <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"mb-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [step] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\">
    <form class=\\"mb-form mb-form-layout-inline mb-form-size-medium\\">
      <div class=\\"mb-row-align-start mb-row-justify-start mb-form-item mb-form-item-layout-inline\\">
        <div class=\\"mb-form-item-label-col\\"><label class=\\"mb-form-item-label\\">
            <!--v-if-->Step
          </label></div>
        <div class=\\"mb-form-item-wrapper-col\\">
          <div class=\\"mb-form-item-content-wrapper\\">
            <div class=\\"mb-form-item-content mb-form-item-content-flex\\"><span class=\\"mb-input-wrapper mb-input-number mb-input-number-mode-embed mb-input-number-size-medium\\" style=\\"width: 100px;\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"Infinity\\" aria-valuemin=\\"-Infinity\\" aria-valuenow=\\"5\\" class=\\"mb-input mb-input-size-medium\\" type=\\"text\\"><!----><span class=\\"mb-input-suffix\\"><!----><!----><div class=\\"mb-input-number-step\\"><button class=\\"mb-input-number-step-button\\" type=\\"button\\" tabindex=\\"-1\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-up\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 30.557 24.043 15 8.487 30.557\\"></path></svg></button><button class=\\"mb-input-number-step-button\\" type=\\"button\\" tabindex=\\"-1\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></button></div><!----></span></span></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div class=\\"mb-row-align-start mb-row-justify-start mb-form-item mb-form-item-layout-inline\\">
        <div class=\\"mb-form-item-label-col\\"><label class=\\"mb-form-item-label\\">
            <!--v-if-->Show steps
          </label></div>
        <div class=\\"mb-form-item-wrapper-col\\">
          <div class=\\"mb-form-item-content-wrapper\\">
            <div class=\\"mb-form-item-content mb-form-item-content-flex\\"><button type=\\"button\\" role=\\"switch\\" aria-checked=\\"true\\" class=\\"mb-switch mb-switch-type-circle mb-switch-checked\\"><span class=\\"mb-switch-handle\\"><span class=\\"mb-switch-handle-icon\\"></span></span><!--  prettier-ignore  -->
                <!--v-if-->
              </button></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </form>
  </div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-slider\\" style=\\"width: 300px;\\">
      <div class=\\"mb-slider-track\\">
        <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 80%;\\"></div>
        <div class=\\"mb-slider-ticks\\">
          <div class=\\"mb-slider-tick mb-slider-tick-active\\" style=\\"left: 5%;\\"></div>
          <div class=\\"mb-slider-tick mb-slider-tick-active\\" style=\\"left: 10%;\\"></div>
          <div class=\\"mb-slider-tick mb-slider-tick-active\\" style=\\"left: 15%;\\"></div>
          <div class=\\"mb-slider-tick mb-slider-tick-active\\" style=\\"left: 20%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 25%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 30%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 35%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 40%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 45%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 50%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 55%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 60%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 65%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 70%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 75%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 80%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 85%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 90%;\\"></div>
          <div class=\\"mb-slider-tick\\" style=\\"left: 95%;\\"></div>
        </div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 20%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" aria-valuetext=\\"20\\" class=\\"mb-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<slider> demo: render [tooltip] correctly 1`] = `
"<div class=\\"mb-slider\\" style=\\"width: 200px;\\">
  <div class=\\"mb-slider-track\\">
    <div class=\\"mb-slider-bar\\" style=\\"left: 0%; right: 100%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 0%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"50\\" aria-valuemin=\\"0\\" aria-valuenow=\\"0\\" aria-valuetext=\\"0%\\" class=\\"mb-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [vertical] correctly 1`] = `
"<div class=\\"mb-space mb-space-horizontal mb-space-align-start\\">
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\">
    <div class=\\"mb-slider mb-slider-vertical\\">
      <div class=\\"mb-slider-track mb-slider-track-vertical\\">
        <div class=\\"mb-slider-bar\\" style=\\"bottom: 0%; top: 50%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"bottom: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"mb-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-slider mb-slider-vertical mb-slider-with-marks\\" style=\\"width: 300px;\\">
      <div class=\\"mb-slider-track mb-slider-track-vertical\\">
        <div class=\\"mb-slider-bar\\" style=\\"bottom: 0%; top: 66.67%;\\"></div>
        <!--v-if-->
        <div class=\\"mb-slider-dots\\">
          <div class=\\"mb-slider-dot-wrapper\\" style=\\"bottom: 33.33%;\\">
            <div class=\\"mb-slider-dot mb-slider-dot-active\\"></div>
          </div>
          <div class=\\"mb-slider-dot-wrapper\\" style=\\"bottom: 66.67%;\\">
            <div class=\\"mb-slider-dot\\"></div>
          </div>
        </div>
        <div class=\\"mb-slider-marks\\">
          <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"bottom: 33.33%;\\">5km</div>
          <div aria-hidden=\\"true\\" class=\\"mb-slider-mark\\" style=\\"bottom: 66.67%;\\">10km</div>
        </div>
        <!--v-if-->
        <div style=\\"bottom: 33.33%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"15\\" aria-valuemin=\\"0\\" aria-valuenow=\\"5\\" aria-valuetext=\\"5\\" class=\\"mb-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
